--- a/src/sass/base/_animations.scss
+++ b/src/sass/base/_animations.scss
@@ -18,7 +18,7 @@
 @keyframes moveInFront {
   0% {
     opacity: 0;
-    transform: scale(0);
+    transform: scale(0) translate(-50%, -50%);
   }
 
   100% {
